# quelvio-crewai

./: .gitignore  CHANGELOG.md  README.md  STRICT_MODE_HANDOFF.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/quelvio_crewai/: __init__.py  _version.py  client.py  exceptions.py  tool.py  types.py
tests/: conftest.py  test_client.py  test_tool.py
