[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "quelvio-crewai"
version = "0.1.1"
description = "Quelvio for CrewAI — your company's brain as a CrewAI tool."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Quelvio", email = "engineering@quelvio.com" },
]
keywords = [
    "crewai",
    "quelvio",
    "rag",
    "retrieval",
    "llm",
    "agent",
    "agents",
    "multi-agent",
    "enterprise-search",
    "knowledge-base",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<1.0",
    "crewai>=0.55.0",
    "pydantic>=2.5,<3.0",
    "typing-extensions>=4.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "respx>=0.21",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
]

[project.urls]
Homepage = "https://quelvio.com"
Documentation = "https://docs.quelvio.com"
Source = "https://github.com/Quelvio/quelvio-crewai-python"
Issues = "https://github.com/Quelvio/quelvio-crewai-python/issues"
Changelog = "https://github.com/Quelvio/quelvio-crewai-python/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/quelvio_crewai"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
disallow_untyped_decorators = false
# crewai's BaseTool uses dynamic pydantic patterns that don't satisfy strict
# mypy out of the box; relax the rules that cross that boundary.
[[tool.mypy.overrides]]
module = "crewai.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    # crewai emits warnings from its own dependency chain that we don't control.
    "ignore::DeprecationWarning:crewai.*",
    "ignore::DeprecationWarning:pydantic.*",
    "ignore::ImportWarning",
    "ignore::PendingDeprecationWarning",
    "ignore::ResourceWarning",
]
